--- a/index.html
+++ b/index.html
@@ -2,3 +2,45 @@
 layout: home
 author_profile: true
 ---
+
+## Welcome to my page
+
+I have 25 years of experience in defining, architecting and implementing software technology solutions.
+Although a Technologist at heart my real passion is in applying technology to help solve real world
+business problems. On this site you will find links and downloads to templates, books, presentations,
+code and other collateral that I have created over the years.
+
+### Projects
+
+- Ring2Park Online - a Spring MVC/Webflow reference application.
+- Digital Parking Solutions - a HTML 5 / CSS 3 reference application (also makes use of Less) [source on github]
+- The Buildmeister - a portal for developers involved in the build and release management process.
+- HappyBank - a Java reference application primarily used for testing an enterprise build process using Apache Ant.
+- clearantlib - a library of tasks for integrating ClearCase and Apache Ant.
+
+### Articles, Books and Whitepapers
+
+- [Book] The Buildmeister's Guide - Achieving Agile Software Delivery.
+- [Book] Apache Ant - The Buildmeister's Guide.
+- [Book] IBM Rational ClearCase, Ant and CruiseControl - The Java Developer's Guide to Accelerating and Automating the Build Process.
+- [Whitepaper] Agile SCM in the Enterprise.
+- [Article] Agile SCM and the IBM Rational Toolset.
+- [Article] Accelerate and automate the build process with IBM Rational ClearCase and Ant.
+- [Article] Realizing Continuous Integration.
+
+### Documents and Templates
+
+- ALM Governance Framework Diagram [Visio Diagram] [PDF] - an example of how application development, project management and service management processes can interrelate to provide a governance framework.
+- ALM Capability Assessment [Excel] - a spreadsheet that you can use to establish your own current and future requirements for ALM.
+- Vision and Scope Document [PDF] - an example of a Vision and Scope document for a reference application.
+
+### Presentations
+
+- Breaking Down the Wall - Overcoming the handover from development to operations. [PDF]
+- Release Management - Crossing the Chasm of Application Deployment. [PDF]
+- Global Development & Delivery - The politics, patterns and process of implementing distributed software configuration management. [PDF]
+- Agile SCM - Realising Continuous Integration. [PDF]
+- Accelerating and Automating the Build Process with IBM Rational ClearCase and Apache Ant. [PDF]
+-Automating Software Release Management with Rational ClearCase and ClearQuest [PDF]
+
+
