--- a/_pages/templates.html
+++ b/_pages/templates.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Templates"
+permalink: /templates/
 author_profile: true
 ---
 
