--- a/_pages/coding.html
+++ b/_pages/coding.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /teaching/
+title: "Coding"
+permalink: /coding/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
+{% for post in site.coding reversed %}
   {% include archive-single.html %}
 {% endfor %}
