--- a/_pages/code.html
+++ b/_pages/code.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Coding"
-permalink: /coding/
+title: "Code"
+permalink: /code/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.coding reversed %}
+{% for post in site.code reversed %}
   {% include archive-single.html %}
 {% endfor %}
